--- a/View/src/main/resources/pl/comp/view/primary.fxml
+++ b/View/src/main/resources/pl/comp/view/primary.fxml
@@ -1,15 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.layout.VBox?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.Button?>
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ChoiceBox?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.VBox?>
 
-<VBox alignment="CENTER" spacing="20.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1"
-      fx:controller="pl.comp.view.PrimaryController">
-   <padding>
-      <Insets bottom="20.0" left="20.0" right="20.0" top="20.0"/>
-   </padding>
-   <Label text="Primary View"/>
-   <Button fx:id="primaryButton" text="Switch to Secondary View" onAction="#switchToSecondary"/>
-</VBox>
+
+<Pane prefHeight="620.0" prefWidth="860.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="pl.comp.view.PrimaryController">
+   <children>
+      <VBox alignment="CENTER" prefHeight="620.0" prefWidth="860.0" spacing="20.0">
+         <padding>
+            <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
+         </padding>
+         <ChoiceBox fx:id="difficultyChoiceBox" prefWidth="150.0" />
+         <Button fx:id="primaryButton" onAction="#switchToSecondary" prefHeight="26.0" prefWidth="68.0" text="Start" />
+      </VBox>
+   </children>
+</Pane>
