--- a/View/src/main/resources/pl/comp/view/primary.fxml
+++ b/View/src/main/resources/pl/comp/view/primary.fxml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.String?>
+<?import javafx.collections.FXCollections?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
-
 
 <Pane prefHeight="620.0" prefWidth="860.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="pl.comp.view.PrimaryController">
    <children>
@@ -13,7 +14,15 @@
          <padding>
             <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
          </padding>
-         <ChoiceBox fx:id="difficultyChoiceBox" prefWidth="150.0" />
+         <ChoiceBox fx:id="difficultyChoiceBox" prefWidth="150.0" style="-fx-pref-width: 150;" stylesheets="@primaryScreen.css">
+                 <items>
+                    <FXCollections fx:factory="observableArrayList">
+                       <String fx:value="Easy" />
+                       <String fx:value="Medium" />
+                       <String fx:value="Hard" />
+                    </FXCollections>
+                 </items>
+         </ChoiceBox>
          <Button fx:id="primaryButton" onAction="#switchToSecondary" prefHeight="26.0" prefWidth="68.0" text="Start" />
       </VBox>
    </children>
