Adding options to choice box

--- a/View/src/main/resources/pl/comp/view/primaryScreen.css
+++ b/View/src/main/resources/pl/comp/view/primaryScreen.css
@@ -1,7 +1,10 @@
 .choice-box {
     -fx-pref-width: 150;
+    -fx-border-color: black;
+    -fx-font-family: "Comic Sans MS";
 }
 
 .choice-box, .context-menu {
     -fx-pref-width: 150;
+    -fx-font-family: "Comic Sans MS";
 }
