--- a/View/src/main/resources/pl/comp/view/secondary.fxml
+++ b/View/src/main/resources/pl/comp/view/secondary.fxml
@@ -8,8 +8,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 
-
-<Pane prefHeight="620.0" prefWidth="860.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="pl.comp.view.SecondaryController">
+<Pane fx:id="root" prefHeight="620.0" prefWidth="860.0" stylesheets="@secondary.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="pl.comp.view.SecondaryController">
    <children>
       <VBox alignment="CENTER" layoutX="718.0" layoutY="539.0" spacing="20.0">
           <padding>
@@ -18,7 +17,7 @@
           <Button fx:id="secondaryButton" onAction="#switchToPrimary" prefHeight="26.0" prefWidth="101.0" text="Back" />
       </VBox>
       <Button layoutX="738.0" layoutY="34.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="102.0" text="Reset" />
-      <GridPane fx:id="sudokuBoardGrid" layoutX="14.0" layoutY="15.0" prefHeight="590.0" prefWidth="690.0" style="-fx-border-color: #000000;">
+      <GridPane fx:id="sudokuBoardGrid" layoutX="14.0" layoutY="15.0" prefHeight="590.0" prefWidth="690.0" style="-fx-border-color: #000000; -fx-background-color: #F0EBD7; -fx-background-fill: black,  #F0EBD7; -fx-background-insets: 0, 1;" stylesheets="@secondary.css">
         <columnConstraints>
           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
