--- a/View/src/main/resources/pl/comp/view/primaryScreen.css
+++ b/View/src/main/resources/pl/comp/view/primaryScreen.css
@@ -4,7 +4,14 @@
     -fx-font-family: "Comic Sans MS";
 }
 
+.button {
+    -fx-font-weight: bold;
+    -fx-border-radius: 15px;
+    -fx-background-radius: 15px;
+}
+
 .choice-box, .context-menu {
     -fx-pref-width: 150;
     -fx-font-family: "Comic Sans MS";
 }
+
