--- a/View/src/main/resources/pl/comp/view/secondary.css
+++ b/View/src/main/resources/pl/comp/view/secondary.css
@@ -3,3 +3,20 @@
     -fx-border-color: black;
     -fx-font-family: "Comic Sans MS";
 }
+
+.button {
+    -fx-font-weight: bold;
+    -fx-border-color: black;
+    -fx-border-radius: 15px;
+    -fx-background-radius: 15px;
+}
+
+.text-field {
+    -fx-padding: 5 5 5 5;
+    -fx-background-color: -fx-text-box-border, -fx-background ;
+    -fx-pref-width: 25px;
+}
+
+.text-field:focused {
+    -fx-background-color: -fx-text-box-border, -fx-background ;
+}
