--- a/View/src/main/resources/pl/comp/view/secondary.fxml
+++ b/View/src/main/resources/pl/comp/view/secondary.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.String?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.layout.ColumnConstraints?>
@@ -16,8 +17,8 @@
           </padding>
           <Button fx:id="secondaryButton" onAction="#switchToPrimary" prefHeight="26.0" prefWidth="101.0" text="Back" />
       </VBox>
-      <Button layoutX="738.0" layoutY="34.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="102.0" text="Reset" />
-      <GridPane fx:id="sudokuBoardGrid" alignment="CENTER" layoutX="14.0" layoutY="15.0" prefHeight="585.0" prefWidth="688.0" style="-fx-border-color: #000000;" styleClass="sudokuBoardGrid" stylesheets="@secondary.css">
+      <Button fx:id="ResetButton" layoutX="738.0" layoutY="34.0" mnemonicParsing="false" onAction="#reset" prefHeight="25.0" prefWidth="102.0" text="Reset" />
+      <GridPane fx:id="sudokuBoardGrid" alignment="CENTER" layoutX="14.0" layoutY="15.0" prefHeight="585.0" prefWidth="688.0" style="-fx-border-color: #000000;" stylesheets="@secondary.css">
         <columnConstraints>
             <ColumnConstraints fx:id="row0" halignment="CENTER" hgrow="SOMETIMES" maxWidth="-Infinity" minWidth="25.0" prefWidth="100.0" />
             <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" maxWidth="-Infinity" minWidth="25.0" prefWidth="100.0" />
@@ -40,6 +41,10 @@
             <RowConstraints minHeight="10.0" prefHeight="30.0" valignment="CENTER" vgrow="SOMETIMES" />
             <RowConstraints minHeight="10.0" prefHeight="30.0" valignment="CENTER" vgrow="SOMETIMES" />
         </rowConstraints>
+         <styleClass>
+            <String fx:value="sudokuBoardGrid" />
+            <String fx:value="Line" />
+         </styleClass>
       </GridPane>
    </children>
 </Pane>
