--- a/View/src/main/resources/pl/comp/view/secondary.fxml
+++ b/View/src/main/resources/pl/comp/view/secondary.fxml
@@ -1,50 +1,54 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.String?>
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.Pane?>
-<?import javafx.scene.layout.RowConstraints?>
-<?import javafx.scene.layout.VBox?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
 
-<Pane fx:id="root" prefHeight="620.0" prefWidth="860.0" stylesheets="@secondary.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="pl.comp.view.SecondaryController">
-   <children>
-      <VBox alignment="CENTER" layoutX="718.0" layoutY="539.0" spacing="20.0">
-          <padding>
-              <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
-          </padding>
-          <Button fx:id="secondaryButton" onAction="#switchToPrimary" prefHeight="26.0" prefWidth="101.0" text="Back" />
-      </VBox>
-      <Button fx:id="ResetButton" layoutX="738.0" layoutY="34.0" mnemonicParsing="false" onAction="#reset" prefHeight="25.0" prefWidth="102.0" text="Reset" />
-      <GridPane fx:id="sudokuBoardGrid" alignment="CENTER" layoutX="14.0" layoutY="15.0" prefHeight="585.0" prefWidth="688.0" style="-fx-border-color: #000000;" stylesheets="@secondary.css">
-        <columnConstraints>
-            <ColumnConstraints fx:id="row0" halignment="CENTER" hgrow="SOMETIMES" maxWidth="-Infinity" minWidth="25.0" prefWidth="100.0" />
-            <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" maxWidth="-Infinity" minWidth="25.0" prefWidth="100.0" />
-            <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" maxWidth="-Infinity" minWidth="25.0" prefWidth="100.0" />
-            <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" maxWidth="-Infinity" minWidth="25.0" prefWidth="100.0" />
-            <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" maxWidth="-Infinity" minWidth="25.0" prefWidth="100.0" />
-            <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" maxWidth="-Infinity" minWidth="25.0" prefWidth="100.0" />
-            <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" maxWidth="-Infinity" minWidth="25.0" prefWidth="100.0" />
-            <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" maxWidth="-Infinity" minWidth="25.0" prefWidth="100.0" />
-            <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" maxWidth="-Infinity" minWidth="25.0" prefWidth="100.0" />
-        </columnConstraints>
-        <rowConstraints>
-            <RowConstraints maxHeight="1.7976931348623157E308" minHeight="10.0" prefHeight="30.0" valignment="CENTER" vgrow="SOMETIMES" />
-            <RowConstraints minHeight="10.0" prefHeight="30.0" valignment="CENTER" vgrow="SOMETIMES" />
-            <RowConstraints minHeight="10.0" prefHeight="30.0" valignment="CENTER" vgrow="SOMETIMES" />
-            <RowConstraints minHeight="10.0" prefHeight="30.0" valignment="CENTER" vgrow="SOMETIMES" />
-            <RowConstraints minHeight="10.0" prefHeight="30.0" valignment="CENTER" vgrow="SOMETIMES" />
-            <RowConstraints minHeight="10.0" prefHeight="30.0" valignment="CENTER" vgrow="SOMETIMES" />
-            <RowConstraints minHeight="10.0" prefHeight="30.0" valignment="CENTER" vgrow="SOMETIMES" />
-            <RowConstraints minHeight="10.0" prefHeight="30.0" valignment="CENTER" vgrow="SOMETIMES" />
-            <RowConstraints minHeight="10.0" prefHeight="30.0" valignment="CENTER" vgrow="SOMETIMES" />
-        </rowConstraints>
-         <styleClass>
-            <String fx:value="sudokuBoardGrid" />
-            <String fx:value="Line" />
-         </styleClass>
-      </GridPane>
-   </children>
+<Pane prefHeight="620.0" prefWidth="860.0" stylesheets="@secondary.css"
+      xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1"
+      fx:controller="pl.comp.view.SecondaryController">
+    <VBox alignment="CENTER" layoutX="718.0" layoutY="539.0" spacing="20.0">
+        <padding>
+            <Insets bottom="20.0" left="20.0" right="20.0" top="20.0"/>
+        </padding>
+        <Button fx:id="secondaryButton" onAction="#switchToPrimary" prefHeight="26.0" prefWidth="101.0" text="Back"/>
+    </VBox>
+    <Button layoutX="738.0" layoutY="34.0" mnemonicParsing="false" onAction="#resetGame" prefHeight="25.0"
+            prefWidth="102.0" text="Reset"/>
+    <GridPane fx:id="sudokuBoardGrid" alignment="CENTER" layoutX="14.0" layoutY="15.0" prefHeight="585.0"
+              prefWidth="688.0" style="-fx-border-color: #000000;" styleClass="sudokuBoardGrid"
+              stylesheets="@secondary.css">
+      <columnConstraints>
+          <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" maxWidth="-Infinity" minWidth="25.0"
+                             prefWidth="100.0"/>
+          <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" maxWidth="-Infinity" minWidth="25.0"
+                             prefWidth="100.0"/>
+          <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" maxWidth="-Infinity" minWidth="25.0"
+                             prefWidth="100.0"/>
+          <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" maxWidth="-Infinity" minWidth="25.0"
+                             prefWidth="100.0"/>
+          <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" maxWidth="-Infinity" minWidth="25.0"
+                             prefWidth="100.0"/>
+          <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" maxWidth="-Infinity" minWidth="25.0"
+                             prefWidth="100.0"/>
+          <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" maxWidth="-Infinity" minWidth="25.0"
+                             prefWidth="100.0"/>
+          <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" maxWidth="-Infinity" minWidth="25.0"
+                             prefWidth="100.0"/>
+          <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" maxWidth="-Infinity" minWidth="25.0"
+                             prefWidth="100.0"/>
+      </columnConstraints>
+      <rowConstraints>
+          <RowConstraints maxHeight="1.7976931348623157E308" minHeight="10.0" prefHeight="30.0" valignment="CENTER"
+                          vgrow="SOMETIMES"/>
+          <RowConstraints minHeight="10.0" prefHeight="30.0" valignment="CENTER" vgrow="SOMETIMES"/>
+          <RowConstraints minHeight="10.0" prefHeight="30.0" valignment="CENTER" vgrow="SOMETIMES"/>
+          <RowConstraints minHeight="10.0" prefHeight="30.0" valignment="CENTER" vgrow="SOMETIMES"/>
+          <RowConstraints minHeight="10.0" prefHeight="30.0" valignment="CENTER" vgrow="SOMETIMES"/>
+          <RowConstraints minHeight="10.0" prefHeight="30.0" valignment="CENTER" vgrow="SOMETIMES"/>
+          <RowConstraints minHeight="10.0" prefHeight="30.0" valignment="CENTER" vgrow="SOMETIMES"/>
+          <RowConstraints minHeight="10.0" prefHeight="30.0" valignment="CENTER" vgrow="SOMETIMES"/>
+          <RowConstraints minHeight="10.0" prefHeight="30.0" valignment="CENTER" vgrow="SOMETIMES"/>
+      </rowConstraints>
+    </GridPane>
 </Pane>
