--- a/View/src/main/resources/pl/comp/view/primary.fxml
+++ b/View/src/main/resources/pl/comp/view/primary.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<Pane prefHeight="620.0" prefWidth="860.0" style="-fx-background-color: #F2DA8A;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="pl.comp.view.PrimaryController">
+<Pane fx:id="primaryPane" prefHeight="620.0" prefWidth="860.0" style="-fx-background-color: #F2DA8A;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="pl.comp.view.PrimaryController">
    <children>
       <VBox fx:id="root" alignment="CENTER" prefHeight="620.0" prefWidth="860.0" spacing="20.0" stylesheets="@primaryScreen.css">
          <padding>
