--- a/View/src/main/resources/pl/comp/view/secondary.fxml
+++ b/View/src/main/resources/pl/comp/view/secondary.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 
-<Pane prefHeight="620.0" prefWidth="860.0" stylesheets="@secondary.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="pl.comp.view.SecondaryController">
+<Pane fx:id="secondPane" prefHeight="620.0" prefWidth="860.0" stylesheets="@secondary.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="pl.comp.view.SecondaryController">
     <VBox alignment="CENTER" layoutX="718.0" layoutY="539.0" spacing="20.0">
         <padding>
             <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
