Add save and load button, functionality for this button in progress

--- a/View/src/main/resources/pl/comp/view/primaryScreen.css
+++ b/View/src/main/resources/pl/comp/view/primaryScreen.css
@@ -1,7 +1,7 @@
 .choice-box {
     -fx-pref-width: 150;
     -fx-border-color: black;
-    -fx-font-family: "Comic Sans MS";
+    -fx-font-family: "SansSerif";
 }
 
 .button {
@@ -12,6 +12,6 @@
 
 .choice-box, .context-menu {
     -fx-pref-width: 150;
-    -fx-font-family: "Comic Sans MS";
+    -fx-font-family: "SansSerif";
 }
 
