--- a/View/src/main/resources/pl/comp/view/secondary.css
+++ b/View/src/main/resources/pl/comp/view/secondary.css
@@ -1,7 +1,7 @@
 .root {
     -fx-background-color: #F2DA8A;
     -fx-border-color: black;
-    -fx-font-family: "Comic Sans MS";
+    -fx-font-family: "SansSerif";
     -fx-padding: 10px;
 }
 
