--- a/View/src/main/resources/pl/comp/view/primary.fxml
+++ b/View/src/main/resources/pl/comp/view/primary.fxml
@@ -1,13 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.String?>
-<?import javafx.collections.FXCollections?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.RadioButton?>
-<?import javafx.scene.control.ToggleGroup?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
@@ -16,43 +12,20 @@
    <children>
       <VBox alignment="CENTER" prefHeight="620.0" prefWidth="860.0" spacing="20.0" stylesheets="@primaryScreen.css">
          <padding>
-            <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
+            <Insets bottom="20.0" left="20.0" right="20.0" top="80.0" />
          </padding>
-         <ChoiceBox fx:id="difficultyChoiceBox" prefWidth="150.0" style="-fx-pref-width: 150; -fx-background-color: #FFFFFF;" stylesheets="@primaryScreen.css">
-                 <items>
-                    <FXCollections fx:factory="observableArrayList">
-                       <String fx:value="%easyLevelLabel" />
-                       <String fx:value="%mediumLevelLabel" />
-                       <String fx:value="%hardLevelLabel" />
-                    </FXCollections>
-                 </items>
-         </ChoiceBox>
+         <ChoiceBox fx:id="difficultyChoiceBox" prefWidth="150.0" style="-fx-pref-width: 150; -fx-background-color: #FFFFFF;" stylesheets="@primaryScreen.css" />
          <Button fx:id="primaryButton" onAction="#switchToSecondary" prefHeight="26.0" prefWidth="68.0" style="-fx-background-color: #FFFFFF; -fx-border-color: #000000;" text="%startButtonLabel" />
-         <RadioButton fx:id="engButton" mnemonicParsing="false" onAction="#loadEnglish" prefHeight="18.0" prefWidth="49.0" selected="true" text="ENG">
-            <font>
-               <Font name="Comic Sans MS Bold" size="12.0" />
-            </font>
-            <toggleGroup>
-               <ToggleGroup fx:id="languageGroup" />
-            </toggleGroup>
-         </RadioButton>
-         <RadioButton fx:id="plButton" mnemonicParsing="false" onAction="#loadPL" prefHeight="18.0" prefWidth="51.0" text="PL" toggleGroup="$languageGroup">
-            <font>
-               <Font name="Comic Sans MS Bold" size="12.0" />
-            </font>
-         </RadioButton>
-         <RadioButton fx:id="frButton" mnemonicParsing="false" onAction="#loadFR" prefHeight="18.0" prefWidth="52.0" text="FR" toggleGroup="$languageGroup">
-            <font>
-               <Font name="Comic Sans MS Bold" size="12.0" />
-            </font>
-         </RadioButton>
+         <Button fx:id="plButton" mnemonicParsing="false" onAction="#loadPL" prefHeight="26.0" prefWidth="37.0" text="PL" />
+         <Button fx:id="engButton" mnemonicParsing="false" onAction="#loadEng" text="ENG" />
+         <Button fx:id="frButton" mnemonicParsing="false" onAction="#loadFR" text="FR" />
       </VBox>
-      <Label prefHeight="168.0" prefWidth="860.0" text="Sudoku Game" textAlignment="CENTER">
+      <Label prefHeight="174.0" prefWidth="860.0" text="Sudoku Game" textAlignment="CENTER">
          <font>
             <Font name="System Bold" size="24.0" />
          </font>
          <padding>
-            <Insets left="345.0" top="125.0" />
+            <Insets left="345.0" top="130.0" />
          </padding>
       </Label>
    </children>
