Load and save controller with bugs :(

--- a/View/src/main/resources/pl/comp/view/inputFile.fxml
+++ b/View/src/main/resources/pl/comp/view/inputFile.fxml
@@ -6,14 +6,14 @@
 <?import javafx.scene.layout.AnchorPane?>
 
 
-<AnchorPane prefHeight="100.0" prefWidth="250.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="pl.comp.view.InputFile">
+<AnchorPane prefHeight="100.0" prefWidth="250.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="pl.comp.view.InputController">
    <children>
       <TitledPane animated="false" prefHeight="121.0" prefWidth="250.0" text="%chooseFile">
         <content>
           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="112.0" prefWidth="255.0">
                <children>
-                  <Button layoutX="123.0" layoutY="48.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="111.0" text="\%saveButtonLabel" />
-                  <TextField layoutX="14.0" layoutY="14.0" prefHeight="26.0" prefWidth="215.0" />
+                  <Button layoutX="123.0" layoutY="48.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="111.0" text="\%saveButtonLabel" onAction="#submit" />
+                  <TextField fx:id="textField" layoutX="14.0" layoutY="14.0" prefHeight="26.0" prefWidth="215.0" />
                </children>
             </AnchorPane>
         </content>
